近接センサーが起動しないバグを修正

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ CoreAudioSample/Chapter12/Chapter12.xcodeproj/project.xcworkspace/contents.xcwor
 CoreAudioSample/Chapter12/Chapter12.xcodeproj/project.xcworkspace/xcuserdata/EXILIAS.xcuserdatad/UserInterfaceState.xcuserstate
 CoreAudioSample/Chapter12/Chapter12.xcodeproj/xcuserdata/EXILIAS.xcuserdatad/xcschemes/Chapter12.xcscheme
 CoreAudioSample/Chapter12/Chapter12.xcodeproj/xcuserdata/EXILIAS.xcuserdatad/xcschemes/xcschememanagement.plist
+Proximity Sensor/Proximity Sensor.xcodeproj/project.xcworkspace/contents.xcworkspacedata
+Proximity Sensor/Proximity Sensor.xcodeproj/project.xcworkspace/xcuserdata/EXILIAS.xcuserdatad/UserInterfaceState.xcuserstate
+Proximity Sensor/Proximity Sensor.xcodeproj/xcuserdata/EXILIAS.xcuserdatad/xcschemes/Proximity Sensor.xcscheme
+Proximity Sensor/Proximity Sensor.xcodeproj/xcuserdata/EXILIAS.xcuserdatad/xcschemes/xcschememanagement.plist
