--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ Proximity Sensor/Proximity Sensor.xcodeproj/project.xcworkspace/contents.xcworks
 Proximity Sensor/Proximity Sensor.xcodeproj/project.xcworkspace/xcuserdata/EXILIAS.xcuserdatad/UserInterfaceState.xcuserstate
 Proximity Sensor/Proximity Sensor.xcodeproj/xcuserdata/EXILIAS.xcuserdatad/xcschemes/Proximity Sensor.xcscheme
 Proximity Sensor/Proximity Sensor.xcodeproj/xcuserdata/EXILIAS.xcuserdatad/xcschemes/xcschememanagement.plist
+CoreAudioSample/PowerSpectrumView/RemoteIOPlayThru.xcodeproj/project.xcworkspace/xcuserdata/EXILIAS.xcuserdatad/UserInterfaceState.xcuserstate
+CoreAudioSample/PowerSpectrumView/RemoteIOPlayThru.xcodeproj/xcuserdata/EXILIAS.xcuserdatad/xcschemes/RemoteIOPlayThru.xcscheme
+CoreAudioSample/PowerSpectrumView/RemoteIOPlayThru.xcodeproj/xcuserdata/EXILIAS.xcuserdatad/xcschemes/xcschememanagement.plist
